// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`db getFormByID finds a form 1`] = `
Object {
  "fields": Object {
    "aasas": Object {
      "label": "label",
      "type": "submit",
      "value": "value",
    },
    "ssaf": Object {
      "error": "error",
      "label": "label",
      "type": "text",
      "value": "value",
    },
  },
  "id": "1234",
  "next": Object {
    "id": "2345",
    "type": 0,
  },
}
`;

exports[`db getNextForm gets the next form 1`] = `
Object {
  "fields": Object {
    "ssaf": Object {
      "error": "error",
      "label": "Thank You",
      "type": "text",
      "value": "value",
    },
  },
}
`;

exports[`db getNextForm returns null if form does not exist 1`] = `null`;

exports[`db getNextForm returns null if form has no next 1`] = `null`;
